# funding-application-validation

./: .gitignore  README.md  pyproject.toml
src/inukai/validate/: application_form_validator.py  application_validation.py  bank_statement_validation.py  cli.py  invoice_validation.py  llama-server.py  validation_classes.py
